style.css
* {
    box-sizing: border-box;
}

body {
    background: #292826;
}

.wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    /*height: 100vh;*/
}

.container {
    padding: 3rem;
    /*width: 400px;*/
}

input[type="search"] {
    -webkit-appearance: none !important;
    background-clip: padding-box;
    background-color: white;
    vertical-align: middle;
    border-radius: 0.25rem;
    border: 1px solid #e0e0e5;
    font-size: 1rem;
    width: 100%;
    line-height: 2;
    padding: 0.375rem 1.25rem;
    -webkit-transition: border-color 0.2s;
    -moz-transition: border-color 0.2s;
    transition: border-color 0.2s;
}

input[type="search"]:focus {
    transition: all 0.5s;
    box-shadow: 0 0 40px #f9d442b9;
    border-color: #f9d342;
    outline: none;
}

form.search-form {
    display: flex;
    justify-content: center;
}

label {
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: auto;
    align-self: center;
    margin-bottom: 0;
}

input.search-field {
    margin-bottom: 0;
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: auto;
    align-self: center;
    height: 51px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

input.search-submit {
    height: 51px;
    margin: 0;
    padding: 1rem 1.3rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-top-right-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
    font-family: "Font Awesome 5 Free";
    font-size: 1rem;
}

.screen-reader-text {
    clip: rect(1px, 1px, 1px, 1px);
    position: absolute !important;
    height: 1px;
    width: 1px;
    overflow: hidden;
}

.button {
    display: inline-block;
    font-weight: 600;
    font-size: 0.8rem;
    line-height: 1.15;
    letter-spacing: 0.1rem;
    text-transform: uppercase;
    background: #f9d342;
    color: #292826;
    border: 1px solid transparent;
    vertical-align: middle;
    text-shadow: none;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    transition: all 0.2s;
}

.button:hover,
.button:active,
.button:focus {
    cursor: pointer;
    background: #d4b743;
    color: #292826;
    outline: 0;
}

.results {
    margin-top: 24px;
    display: flex;
    flex-wrap: wrap;
    flex-grow: 0;
}

.card {
    font-family: 'Nunito', sans-serif;
    padding: 16px;
    background: white;
    width: 260px;
    border-radius: 4px;
    margin: 16px;
}

.card-title {
    font-weight: 600;
    font-size: 20px;
    margin-bottom: 16px;
}

.card-logo {
    max-height: 100%;
    max-width: 100%;
}

